--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
+    "next": "^15.3.4",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
