--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@dicebear/collection": "^9.2.2",
     "@dicebear/core": "^9.2.2",
+    "@types/pg": "^8.15.4",
     "@vercel/analytics": "^1.5.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
     "next": "^15.3.4",
+    "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
@@ -27,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
