--- a/package.json
+++ b/package.json
@@ -13,9 +13,22 @@
     "build": "turbo run build",
     "test": "turbo run test",
     "lint": "turbo run lint",
-    "clean": "turbo run clean"
+    "clean": "turbo run clean",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma migrate reset",
+    "docker:dev": "./docker/start-dev.sh",
+    "docker:full": "./docker/start-full.sh",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "docker:logs": "docker compose logs -f",
+    "docker:build": "docker compose build"
   },
   "devDependencies": {
+    "tsx": "^4.20.3",
     "turbo": "^1.10.0",
     "typescript": "^5.0.0"
   },
