--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-dom-confetti": "^0.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^3.0.2"
