--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@babel/code-frame": "^7.27.1",
     "@dicebear/collection": "^9.2.2",
     "@dicebear/core": "^9.2.2",
+    "@hookform/resolvers": "^5.1.1",
     "@types/pg": "^8.15.4",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
@@ -27,10 +28,12 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-dom-confetti": "^0.2.0",
+    "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2",
-    "recharts": "^3.0.2"
+    "recharts": "^3.0.2",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
