--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.16.0",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.513.0",
     "next": "^15.3.4",
     "pg": "^8.16.3",
@@ -32,6 +33,7 @@
     "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2",
+    "react-use": "^17.6.0",
     "recharts": "^3.0.2",
     "zod": "^3.25.67"
   },
