--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@dicebear/collection": "^9.2.2",
     "@dicebear/core": "^9.2.2",
     "@hookform/resolvers": "^5.1.1",
+    "@react-spring/web": "^10.0.1",
     "@types/pg": "^8.15.4",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
