--- a/package.json
+++ b/package.json
@@ -19,13 +19,7 @@
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
-    "db:reset": "prisma migrate reset",
-    "docker:dev": "./docker/start-dev.sh",
-    "docker:full": "./docker/start-full.sh",
-    "docker:up": "docker compose up -d",
-    "docker:down": "docker compose down",
-    "docker:logs": "docker compose logs -f",
-    "docker:build": "docker compose build"
+    "db:reset": "prisma migrate reset"
   },
   "devDependencies": {
     "tsx": "^4.20.3",
