--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^10.0.1",
+    "date-fns": "^4.1.0",
     "react-hot-toast": "^2.5.2",
     "recharts": "^3.0.2"
   }
