--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "db:reset": "prisma migrate reset"
   },
   "devDependencies": {
+    "@types/react": "^19.1.8",
     "tsx": "^4.20.3",
     "turbo": "^1.10.0",
     "typescript": "^5.0.0"
@@ -30,6 +31,7 @@
     "@react-spring/web": "^10.0.1",
     "date-fns": "^4.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-quill": "^2.0.0",
     "recharts": "^3.0.2"
   }
 }
