--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,13 @@
     "@dicebear/core": "^9.2.2",
     "@hookform/resolvers": "^5.1.1",
     "@react-spring/web": "^10.0.1",
+    "@tiptap/extension-image": "^3.0.7",
+    "@tiptap/extension-link": "^3.0.7",
+    "@tiptap/extension-placeholder": "^3.0.7",
+    "@tiptap/extension-text-align": "^3.0.7",
+    "@tiptap/pm": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
     "@types/pg": "^8.15.4",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
