--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@dicebear/core": "^9.2.2",
     "@hookform/resolvers": "^5.1.1",
     "@react-spring/web": "^10.0.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-image": "^3.0.7",
     "@tiptap/extension-link": "^3.0.7",
     "@tiptap/extension-placeholder": "^3.0.7",
