--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "db:reset": "prisma migrate reset"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.1.8",
     "tsx": "^4.20.3",
     "turbo": "^1.10.0",
@@ -29,6 +30,13 @@
   },
   "dependencies": {
     "@react-spring/web": "^10.0.1",
+    "@tiptap/extension-image": "^3.0.7",
+    "@tiptap/extension-link": "^3.0.7",
+    "@tiptap/extension-placeholder": "^3.0.7",
+    "@tiptap/extension-text-align": "^3.0.7",
+    "@tiptap/pm": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
     "date-fns": "^4.1.0",
     "react-hot-toast": "^2.5.2",
     "recharts": "^3.0.2"
