--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tiptap/starter-kit": "^3.0.7",
     "date-fns": "^4.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.8.0",
     "recharts": "^3.0.2"
   }
 }
