--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,7 +44,8 @@
     "react-router-dom": "^7.8.0",
     "react-use": "^17.6.0",
     "recharts": "^3.0.2",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
