--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^4.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.8.0",
-    "recharts": "^3.0.2"
+    "recharts": "^3.0.2",
+    "zustand": "^5.0.7"
   }
 }
