--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
     "@types/pg": "^8.15.4",
+    "@types/react-window": "^1.8.8",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
@@ -43,6 +44,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.8.0",
     "react-use": "^17.6.0",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "recharts": "^3.0.2",
     "zod": "^3.25.67",
     "zustand": "^5.0.7"
