--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "@tiptap/pm": "^3.0.7",
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
+    "@types/react-window": "^1.8.8",
     "date-fns": "^4.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.8.0",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "recharts": "^3.0.2",
     "zustand": "^5.0.7"
   }
