--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,8 @@
     "@hookform/resolvers": "^5.2.1",
     "@react-spring/web": "^10.0.1",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-query-devtools": "^5.84.1",
     "@tiptap/extension-image": "^3.0.7",
     "@tiptap/extension-link": "^3.0.7",
     "@tiptap/extension-placeholder": "^3.0.7",
