--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,14 +35,18 @@
     "@tiptap/pm": "^3.0.7",
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
+    "@types/dompurify": "^3.0.5",
+    "@types/js-cookie": "^2.2.7",
     "@types/pg": "^8.15.4",
     "@types/react-window": "^1.8.8",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.23.6",
     "fuse.js": "^7.1.0",
+    "js-cookie": "^2.2.1",
     "lucide-react": "^0.513.0",
     "next": "^15.3.4",
     "pg": "^8.16.3",
