--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,13 +28,18 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
-    "@tiptap/extension-image": "^3.0.7",
-    "@tiptap/extension-link": "^3.0.7",
-    "@tiptap/extension-placeholder": "^3.0.7",
-    "@tiptap/extension-text-align": "^3.0.7",
-    "@tiptap/pm": "^3.0.7",
-    "@tiptap/react": "^3.0.7",
-    "@tiptap/starter-kit": "^3.0.7",
+    "@tinymce/tinymce-react": "^6.3.0",
+    "@tiptap/extension-color": "^3.0.9",
+    "@tiptap/extension-font-family": "^3.0.9",
+    "@tiptap/extension-image": "^3.0.9",
+    "@tiptap/extension-link": "^3.0.9",
+    "@tiptap/extension-list-item": "^3.0.9",
+    "@tiptap/extension-placeholder": "^3.0.9",
+    "@tiptap/extension-text-align": "^3.0.9",
+    "@tiptap/extension-text-style": "^3.0.9",
+    "@tiptap/extension-underline": "^3.0.9",
+    "@tiptap/react": "^3.0.9",
+    "@tiptap/starter-kit": "^3.0.9",
     "@types/dompurify": "^3.0.5",
     "@types/js-cookie": "^2.2.7",
     "@types/pg": "^8.15.4",
@@ -63,6 +68,7 @@
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
     "recharts": "^3.0.2",
+    "tinymce": "^8.0.1",
     "zod": "^3.25.76",
     "zustand": "^5.0.7"
   },
